src/StlAPI/StlAPI.cxx
@@ -15,13 +15,13 @@
 #include <StlAPI_Writer.hxx>
 #include <StlAPI_Reader.hxx>
 
-void StlAPI::Write(const TopoDS_Shape& aShape,
+StlAPI_ErrorStatus StlAPI::Write(const TopoDS_Shape& aShape,
 		   const Standard_CString aFile,
 		   const Standard_Boolean aAsciiMode) 
 {
   StlAPI_Writer writer;
   writer.ASCIIMode() = aAsciiMode;
-  writer.Write (aShape, aFile);
+  return writer.Write (aShape, aFile);
 }
 
 
